--- a/tsnfivegcomm/.project
+++ b/tsnfivegcomm/.project
@@ -4,7 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>inet</project>
-		<project>simu5G</project>
+		<project>Simu5G</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
